--- a/styles/body.css
+++ b/styles/body.css
@@ -34,6 +34,30 @@ img.img{
     background-color: rgb(169, 215, 244);
     border-radius: 5px;
 }
+/* Pagination starts */
+.pagination{
+    text-align: center;
+}
+.change{
+    display: flex;
+    justify-content: center;
+}
+.change button{
+    padding: 10px 5px;
+    background-color: rgb(251, 246, 93);
+    margin: 8px 5px;
+    list-style: none;
+    width: 70px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-family: var(--font3);
+    color: black;
+}
+/* .change a{
+    text-decoration: none;
+    font-family: var(--font3);
+    color: black;
+} */
 
 /* Footer Starts */
 .footer{
