--- a/styles/utils.css
+++ b/styles/utils.css
@@ -46,7 +46,7 @@
     padding: 8px;
     border: 2px solid rgb(0, 0, 0);
     background: #f1f1f1;
-    color: white;
+    color: black;
     width: 85%;
 }
 a:hover{
