--- a/styles/body.css
+++ b/styles/body.css
@@ -3,6 +3,7 @@
 }
 body{
     background-color: rgb(109, 151, 208);
+
 }
 img.img{
     height: 150px;
@@ -13,8 +14,20 @@ img.img{
     z-index: 2;
     transition: 1s;
 }
-
+/* Proximity hover */
+/* #anchor{
+    position: absolute;
+}
+img#eye.eye {
+    position: absolute;
+} */
+/* Proximity ends */
+.container{
+    min-height: 800px;
+    margin-top: 150px;
+}
 .card{
+    position: relative;
     padding-inline-start: 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
@@ -92,4 +105,13 @@ img.img{
     background-color: black;
     color: white;
     border-top: 5px solid white;
+}
+
+/* Animation properties */
+.hidden{
+    opacity: 1;
+    transition: all 1s;
+}
+.show{
+    opacity: 1;
 }
