--- a/styles/utils.css
+++ b/styles/utils.css
@@ -12,42 +12,25 @@
     --font5: 'Hammersmith One', sans-serif;
 }
 
-.max-width-0{
-    max-width: 94vw;
-}
-.max-width-1{
-    max-width: 70vw;
-}
-.max-width-2{
-    max-width: 533px;
-}
-.m-auto{
-    margin: auto;
-}
-.right{
-    display: flex;
-    max-width: 20%;
-    height: 45%;
-}
+    .max-width-0{
+        max-width: 94vw;
+    }
+    .max-width-1{
+        max-width: 70vw;
+    }
+    .m-auto{
+        margin: auto;
+    }
 .btn{
-    padding: 8px;
+    padding: 10px;
     border-radius: 8px;
     background-color: rgb(45, 148, 238);
     color: white;
-    border: 2px solid rgb(0, 0, 0);
-    width: 15%;
+    /* border: 2px solid rgb(0, 0, 0); */
 }
 .btn:hover{
     background-color: rgb(23, 56, 83);
     cursor: pointer;
-}
-.right input{
-    border-radius: 8px;
-    padding: 8px;
-    border: 2px solid rgb(0, 0, 0);
-    background: #f1f1f1;
-    color: black;
-    width: 85%;
 }
 a:hover{
     color: rgb(13, 62, 109);
